the definitions of classes are splitted into some hpp/cpp files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,16 +20,16 @@
         "bitset": "cpp",
         "chrono": "cpp",
         "codecvt": "cpp",
-        "compare": "cpp",
         "complex": "cpp",
-        "concepts": "cpp",
         "condition_variable": "cpp",
         "cstdint": "cpp",
         "deque": "cpp",
+        "forward_list": "cpp",
         "list": "cpp",
         "map": "cpp",
         "set": "cpp",
         "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
@@ -58,10 +58,8 @@
         "mutex": "cpp",
         "new": "cpp",
         "ostream": "cpp",
-        "ranges": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
-        "stop_token": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
         "cfenv": "cpp",
