Condition is implemented

--- a/trial/Makefile
+++ b/trial/Makefile
@@ -1,7 +1,8 @@
 CC			= g++
 CFLAGS		= -lboost_context -g -O2
 TARGET		= test
-SRCS    	= test.cpp event.cpp core.cpp timeout.cpp queue_event.cpp process.cpp
+SRCS    	= test.cpp event.cpp core.cpp timeout.cpp queue_event.cpp \
+                  process.cpp condition.cpp allof.cpp anyof.cpp
 OBJS    	= $(SRCS:.cpp=.o)
 
 
