modify CMakeLists.txt for test

--- a/simpp/CMakeLists.txt
+++ b/simpp/CMakeLists.txt
@@ -3,4 +3,7 @@ project(simpp CXX)
 
 
 add_subdirectory(src)
+
 add_subdirectory(test)
+enable_testing()
+add_test(NAME test_process COMMAND test_process)
