--- a/simpp/test/CMakeLists.txt
+++ b/simpp/test/CMakeLists.txt
@@ -4,7 +4,13 @@ include(GoogleTest)
 
 add_executable(test_timeout timeout_test.cpp)
 
-target_link_libraries(test_timeout simpp GTest::GTest GTest::Main)
+target_link_libraries(
+  test_timeout
+  simpp
+  GTest::GTest
+  GTest::Main
+  pthread
+  )
 
 gtest_discover_tests(test_timeout)
 
