add condition test

--- a/simpp/test/CMakeLists.txt
+++ b/simpp/test/CMakeLists.txt
@@ -2,6 +2,8 @@
 find_package(GTest REQUIRED)
 include(GoogleTest)
 
+
+# timeout
 add_executable(test_timeout timeout_test.cpp)
 
 target_link_libraries(
@@ -14,3 +16,15 @@ target_link_libraries(
 
 gtest_discover_tests(test_timeout)
 
+# AND / OR condition
+add_executable(test_condition condition_test.cpp)
+
+target_link_libraries(
+  test_condition
+  simpp
+  GTest::GTest
+  GTest::Main
+  pthread
+  )
+
+gtest_discover_tests(test_condition)
